tycho 0.12.0 -- compiling against indigo -- tests are all passing -- renamed TestAndroidMavenProgressMonitor to DummyAndroidMavenProgressMonitor so that tycho does not freak out -- added a new category.xml for tycho eclipse repository building -- added an aggregator project --removed some versions (well this could be cancelled) -- removed bin folders